--- a/compose.yaml
+++ b/compose.yaml
@@ -10,3 +10,8 @@ services:
           target: /code
   redis:
     image: "redis:alpine"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
